--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   {% include head.html %}
 
   <body>
+    <p>这是一个测试标签</p>
     <div class="page-content" id="article">
       <div class="wrapper">
         {{ content }}
