--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-    <p>这是一个测试标签</p>
+    <span>这是一个测试标签</span>
     <div class="page-content" id="article">
       <div class="wrapper">
         {{ content }}
