--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-    <span>这是default测试标签</span>
+    <span>这是homepage测试标签</span>
     <div class="page-content" id="article">
       <div class="wrapper">
         {{ content }}
