--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,43 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-cmn-Hans">
-
   {% include head.html %}
 
   <body>
     <div class="homepage-img"><img src="../library/img/homepageimg.png" alt=""></div>
     <div class="page-content" id="article">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      <div class="wrapper">{{ content }}</div>
     </div>
     <script>
       // open outbound links in new tab
-      let origin = document.location.origin
-      let links = document.getElementsByTagName('a')
+      let origin = document.location.origin;
+      let links = document.getElementsByTagName('a');
       for (let link of links) {
-        if (link.href && link.href.indexOf(origin) != 0 && !link.href.includes('mailto:')) link.setAttribute('target', '_blank')
+        if (
+          link.href &&
+          link.href.indexOf(origin) != 0 &&
+          !link.href.includes('mailto:')
+        )
+          link.setAttribute('target', '_blank');
       }
 
-      // google analytics
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-ga('create', '{{ site.tracking.ga_id }}', 'auto', {'sampleRate': 100, 'siteSpeedSampleRate': 100}); ga('send', 'pageview')
-
       // responsive table
-      let tables = document.getElementsByTagName('table')
+      let tables = document.getElementsByTagName('table');
       for (let table of tables) {
-        let ths = table.tHead.rows[0].cells
-        let trs = table.tBodies[0].rows
+        let ths = table.tHead.rows[0].cells;
+        let trs = table.tBodies[0].rows;
         for (let row of trs) {
           for (let i = 0; i < row.cells.length; i++) {
-            row.cells[i].setAttribute('data-label', ths[i].textContent)
+            row.cells[i].setAttribute('data-label', ths[i].textContent);
           }
         }
       }
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <script
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "86295a8275e447edbc782a5067fb085d"}'
+      onerror="gtag('set', 'user_properties', {blocker: 'true'});"
+    ></script>
     <script src="/js/zooming.min.js"></script>
-    <script>if (window.Zooming) window.addEventListener('load', function () { new Zooming().listen('.post-content img') })</script>
-
+    <script>
+      if (window.Zooming && typeof screen.orientation == 'undefined')
+        window.addEventListener('load', function () {
+          new Zooming().listen('.post-content img');
+        });
+    </script>
   </body>
-
 </html>
