--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -429,7 +429,7 @@ abbr[title] {
 
   div.highlight {
     @include media-query-min($on-screen) {
-      margin: 0 !important;
+      // margin: 0 !important;
     }
   }
 
