--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -34,7 +34,7 @@
     </script>
     <script
       src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "86295a8275e447edbc782a5067fb085d"}'
+      data-cf-beacon='{"token": ""}'
       onerror="gtag('set', 'user_properties', {blocker: 'true'});"
     ></script>
     <script src="/js/zooming.min.js"></script>
