--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
   <script>
     (function () {
       var script = document.createElement('script');
-      script.src = 'https://unpkg.com/web-vitals';
+      script.src = 'https://unpkg.zhimg.com/web-vitals';
       script.onload = function () {
         const thresholds = {
           CLS: [0.1, 0.25],
