--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -3,7 +3,7 @@
   {% include head.html %}
 
   <body>
-    <div class="homepage-img"><img src="../library/img/homepageimg.png" alt=""></div>
+    <div class="homepage-img"><img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/202206192339428.png" alt=""></div>
     <div class="page-content" id="article">
       <div class="wrapper">{{ content }}</div>
     </div>
