--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark: darken($grey-color, 25%);
 
 // Width of the content area
-$content-width: 800px;
+$content-width: 900px;
 
 $on-palm: 600px;
 $on-laptop: 800px;
@@ -51,4 +51,4 @@ $on-screen: 769px;
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import 'base', 'layout';
+@import 'base', 'layout', '_syntax-highlighting';
