--- a/css/main.scss
+++ b/css/main.scss
@@ -51,4 +51,4 @@ $on-screen: 769px;
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import 'base', 'layout', '_syntax-highlighting';
+@import 'base', 'layout';
