--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -60,8 +60,28 @@
 /**
  * Homepage
  */
+ .outer{
+    display: flex;
+ }
+ .navigation{
+    flex: 1 1 auto;
+    // border: 1px solid black;
+    padding-left: 30px;
+    margin:  40px 0 40px 40px;
+    height: 600px;
+    width: 80px;
+    .menu{
+        text-align: center;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        li{
+            font-size: 5rem;
+        }
+    }
+ }
 .homepage-img {
-    width: 180px;
+    width: 130px;
     margin: auto;
 }
 
@@ -81,7 +101,11 @@
  }
 
 .page-content {
+    flex: 1 1 auto;
+    overflow: scroll;
+    height: 100vh;
     padding-top: $spacing-unit;
+   
     @include media-query-max($on-screen) {
         background-color: $background-color-white;
         padding-bottom: 3em;
@@ -93,6 +117,12 @@
                 width: 700px;
                 margin: 0 auto;
                 padding: 60px 0;
+            }
+            .hitokoto{
+                font-style:italic;
+                font-size: 1rem;
+                margin-top: 43px;
+                float: right;
             }
         }
     }
