fix: Beautify hitokoto

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <div class="outer">
       <div class="navigation">
         <div class="homepage-img">
-          <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/202206192339428.png" alt="">
+          <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/202206192339428.png" alt="less is kk">o</div>
         </div>
         <ul class="menu">
           <li>合</li>
