feat: add analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
   {% include head.html %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNT7YDK0B1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-MNT7YDK0B1');
+</script>
   <body>
     <div class="outer">
       <div class="navigation">
