--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -88,12 +88,12 @@
       margin: 0;
       padding: 0;
       position: absolute;
-      right: 25px;
-      top: 210px;
+      right: 17px;
+      top: 27%;
       li {
         margin: 0;
         padding: 0;
-        font-size: 5rem;
+        font-size: 4rem;
       }
     }
   }
@@ -103,7 +103,7 @@
   height: 80px;
   position: absolute;
   right: 0;
-  top: 80px;
+  top: 10%;
 }
 
 .homepage-img img {
