fix: sidebar style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <div class="homepage-img">
           <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/202206192339428.png" alt="" />
         </div>
-        <ul id="sidebar-title" class="menu">
+        <ul class="menu">
         </ul>
       </div>
     </div>
