--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,7 @@
 
 <body>
   <div class="outer">
-    <div class="navigation">
-      <div class="nav-wrapper">
-        <div class="homepage-img">
-          <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/202206192339428.png" alt="" />
-        </div>
-        <ul class="menu">
-        </ul>
-      </div>
-    </div>
+    {% include navigation.html %}
     <div class="page-content" id="article">
       <div class="wrapper">
         <p id="hitokoto" class="hitokoto">
