--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,5 +5,9 @@
         </div>
         <ul class="menu">
         </ul>
+        <div class="project">
+            <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/amiibowiki/favicon.ico" alt="">
+            <a href="https://www.amiibowiki.com/">Amiibowiki</a>
+        </div>
     </div>
 </div>
