fix: disable web-vitals

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,7 @@
     */
   </script>
   <script>
+    /*
     (function () {
       var script = document.createElement('script');
       script.src = 'https://unpkg.com/web-vitals';
@@ -74,7 +75,7 @@
           return 'good';
         }
 //#region
-         /*  gtag('event', name, {
+            gtag('event', name, {
             value: delta, // Use `delta` so the value can be summed.
             metric_id: id, // Needed to aggregate events.
             metric_value: value, // Optional.
@@ -87,10 +88,11 @@
         webVitals.getFID(sendToGoogleAnalytics);
         webVitals.getLCP(sendToGoogleAnalytics);
         webVitals.getFCP(sendToGoogleAnalytics);
-        webVitals.getTTFB(sendToGoogleAnalytics);  */
+        webVitals.getTTFB(sendToGoogleAnalytics);
 //#endregion
       };
       document.head.appendChild(script);
     })();
+*/
   </script>
 </head>
