--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <div class="navigation">
     <div class="nav-wrapper">
         <div class="homepage-img">
-            <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/202206192339428.png" alt="" />
+            <img src="https://less-1251975755.cos.ap-beijing.myqcloud.com/logo-wuqu.png" alt="" />
         </div>
         <ul class="menu">
         </ul>
