--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,11 @@
     {% include navigation.html %}
     <div class="page-content" id="article">
       <div class="wrapper">
-        <p id="hitokoto" class="hitokoto">
-          <a href="#" id="hitokoto_text">:D 获取中...</a>
-        </p>
+        <div class="hanging-drop">
+          <p id="hitokoto" class="hitokoto">
+            <a href="#" id="hitokoto_text">:D 获取中...</a>
+          </p>
+        </div>
         {{ content }}
       </div>
     </div>
@@ -57,8 +59,8 @@
       })
       .catch(console.error);
   </script>
-  <script src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": ""}'
-    onerror="gtag('set', 'user_properties', {blocker: 'true'});"></script>
+  <!-- <script src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": ""}'
+    onerror="gtag('set', 'user_properties', {blocker: 'true'});"></script> -->
   <script src="/js/zooming.min.js"></script>
   <script>
     if (window.Zooming && typeof screen.orientation == "undefined")
@@ -66,6 +68,7 @@
         new Zooming().listen(".post-content img");
       });
   </script>
+  <script src="../js/denglong.js"></script>
 </body>
 
 </html>
