Overdue New Year hoho

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
         new Zooming().listen(".post-content img");
       });
   </script>
-  <script src="../js/denglong.js"></script>
+  <!-- <script src="../js/denglong.js"></script> -->
 </body>
 
 </html>
