--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,8 @@
     }
 
     // hitokoto api
-    const c = ["a", "b","c","d","h","i","j","k"];
-    const result = c.map(item => `c=${item}`).join('&');
+    const rule = ["a", "b","c","d","h","i","j","k"];
+    const query = rule.map(item => `c=${item}`).join('&');
 
       // Function to fetch hitokoto
       function fetchHitokoto() {
