--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,5 +6,20 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+<!-- Gitalk 评论系统 -->
+{% if site.gitalk %}
+<div id="gitalk-container"></div>
+<script>
+  const gitalk = new Gitalk({
+    clientID: '{{ site.gitalk.clientID }}',
+    clientSecret: '{{ site.gitalk.clientSecret }}',
+    repo: '{{ site.gitalk.repo }}',
+    owner: '{{ site.gitalk.owner }}',
+    admin: '{{ site.gitalk.admin | jsonify }}',
+    id: '{{ page.url | absolute_url }}', // Ensure uniqueness and length less than 50
+    distractionFreeMode: '{{ site.gitalk.distractionFreeMode }}' // Facebook-like distraction free mode
+  })
+  gitalk.render('gitalk-container')
+</script>
+{% endif %}
 </article>
