--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-K329WMFD');</script>
   <!-- End Google Tag Manager -->
+  <!-- 引入 Gitalk 的 CSS 文件 -->
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K329WMFD"
