--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
   <!-- End Google Tag Manager -->
   <!-- 引入 Gitalk 的 CSS 文件 -->
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+  <!-- 引入 Gitalk 的 JavaScript 文件 -->
+  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K329WMFD"
