--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
       repo: '{{ site.gitalk.repo }}',
       owner: '{{ site.gitalk.owner }}',
       admin: '{{ site.gitalk.admin | jsonify }}',
-      id: location.pathname,  // Ensure uniqueness and length less than 50
+      id: location.pathname,
       distractionFreeMode: '{{ site.gitalk.distractionFreeMode }}'
     });
 
