--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,13 +8,14 @@ layout: default
   </div>
   <div id="gitalk-container"></div>
   <script type="text/javascript">
+    var title = location.pathname.substr(0, 50); 
     var gitalk = new Gitalk({
       clientID: '{{ site.gitalk.clientID }}',
       clientSecret: '{{ site.gitalk.clientSecret }}',
       repo: '{{ site.gitalk.repo }}',
       owner: '{{ site.gitalk.owner }}',
       admin: '{{ site.gitalk.admin | jsonify }}',
-      id: location.pathname,
+      id: title,
       distractionFreeMode: '{{ site.gitalk.distractionFreeMode }}'
     });
 
