--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,11 @@ layout: default
     var gitalk = new Gitalk({
       clientID: '{{ site.gitalk.clientID }}',
       clientSecret: '{{ site.gitalk.clientSecret }}',
-      repo: '{{ site.gitalk.repo }}',
-      owner: '{{ site.gitalk.owner }}',
-      admin: '{{ site.gitalk.admin | jsonify }}',
+      repo: 'moselikk.github.io',
+      owner: 'moselikk',
+      admin: ['moselikk'],
       id: title,
-      distractionFreeMode: '{{ site.gitalk.distractionFreeMode }}'
+      distractionFreeMode: false
     });
 
     gitalk.render('gitalk-container');
