--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -125,7 +125,7 @@
     font-style: italic;
     font-size: 12px;
     background-color: #eee;
-    border-radius: 3px;
+    border-radius: 3px 0 0 3px;
   }
 
 }
